# heir-tutorial

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  download_data.py  fashion_mnist_bin.go  fashion_mnist_bin.py  fashion_mnist_test.go  infer.py  model.pth  model.py  requirements.txt  requirements_lock.txt  to_mlir.py  train.py
src/: BUILD  infer.py  train.py
