module(
    name = "heir-tutorial",
    version = "0.1",
)

bazel_dep(name = "rules_python", version = "2.0.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    extra_pip_args = [
        "--extra-index-url",
        "https://download.pytorch.org/whl/cpu",
    ],
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
