module(
    name = "heir-tutorial",
    version = "0.1",
)

# hermetic LLVM toolchain (for C++ compiler and linker)
bazel_dep(name = "llvm", version = "0.7.8")

register_toolchains("@llvm//:all")

bazel_dep(name = "rules_heir", version = "0.0.5")
# ext = use_extension("@rules_heir//heir:extensions.bzl", "local_heir_repositories")
# # path to the directory containing heir-opt and heir-translate
# ext.config(path = "/usr/local/google/home/jkun/fhe/heir/bazel-bin/tools")
# use_repo(ext, "heir_local")
#
# register_toolchains(
#     "@heir_local//:heir_local_toolchain",
# )

bazel_dep(name = "abseil-py", version = "2.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "openfhe", version = "1.4.2.bcr.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    extra_pip_args = [
        "--extra-index-url",
        "https://download.pytorch.org/whl/cpu",
    ],
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

# Go setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Bazel ignores go.mod for the purpose of selecting a go version. To see which
# go version will be used, run:
#
#   bazel run @rules_go//go -- version
#
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_tuneinsight_lattigo_v6",
)
